[package]
name = "rustdsp"
version = "0.3.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
cordic = "0.1.5"
num-complex = "0.4.6"
rayon = "1.10.0"
fixed = "1.28.0"

[dev-dependencies]
criterion = { version = "0.5" }
tokio = { version = "1.43.0", features = ["full"] }

[[bench]]
name = "bench_main"
harness = false
