[package]
name = "rustdsp"
version = "0.3.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
cordic = "0.1.5"
num = "0.4.3"
num-complex = "0.4.6"
fixed = "1.28.0"
anyhow = "1.0.95"
tokio = { version = "1.43.0", features = ["sync"] }
async-trait = "0.1.85"

[dev-dependencies]
criterion = { version = "0.5" }
tokio = { version = "1.43.0", features = ["full"] }

[[bench]]
name = "bench_main"
harness = false
